[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/Bull/Bull.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Bull/Bull.png" type="Texture" id=2]
[ext_resource path="res://Colliders/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Colliders/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/BloodManager.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 0.9, 1.1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 0.7 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.0
height = 4.0

[sub_resource type="CircleShape2D" id=7]
radius = 5.0

[sub_resource type="CircleShape2D" id=8]
radius = 6.0

[node name="Bull" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 0
script = ExtResource( 1 )
speed = 8400
sightDist = 112
acceleration = 75.0
friction = 4500.0

[node name="ScaleHelper" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )
hframes = 7
frame = 6

[node name="Shadow" type="Sprite" parent="ScaleHelper/Sprite"]
modulate = Color( 0, 0, 0, 0.498039 )
position = Vector2( 0, 11 )
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Run = SubResource( 2 )
anims/die = SubResource( 3 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Sight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 8 )
enabled = true

[node name="Hit" type="RayCast2D" parent="."]
visible = false
enabled = true

[node name="Hitbox" parent="." groups=[
"enemy",
] instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 8 )
collision_mask = 2
maskedHurtbox = "enemy"
damage = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -1, -4 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 4
defense = 6

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, 4 )
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 8 )

[node name="BloodManager" parent="." instance=ExtResource( 6 )]

[connection signal="dead" from="Hurtbox" to="." method="_on_dead"]
[connection signal="hurt" from="Hurtbox" to="BloodManager" method="emit_blood"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurt"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="SoftCollision"]
